# viz-mcp-server

./: README.md  pyproject.toml
viz_mcp_server/: __init__.py
viz_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
